Package.json upadated

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build":"npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
-    "start": "npm run start --backend"
+   "build": "npm install --prefix Backend2 && npm install --prefix Frontend && npm run build --prefix Frontend",
+    "start": "node Backend2/src/index.js"
   },
   "keywords": [],
   "author": "",
