--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "frontend",
+  "name": "Frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-      "build": "NODE_ENV=production vite build",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
