--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@daily-co/daily-js": "^0.80.0",
+    "@stream-io/video-react-sdk": "^1.20.1",
     "@zegocloud/zego-uikit-prebuilt": "^2.15.0",
     "axios": "^1.7.7",
     "chat-app": "file:..",
